[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["Hexx King <hexxking13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^2.2.9"
seaborn = "^0.11.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
